# stm32_lessons

./: README.md
2_1_project_template/: CMakeLists.txt
2_1_project_template/Core/Src/: main.c
2_1_project_template/Drivers/CMSIS/ST/STM32F1xx/Inc/: stm32f10x.h
2_1_project_template/Drivers/CMSIS/inc/: stm32f10x.h
2_1_project_template/cmake/: CMakeLists.txt
3_1_led/: CMakeLists.txt  openocd.cfg
3_1_led/Core/User/inc/: i2c.h
3_1_led/cmake/: CMakeLists.txt
3_1_led_flash/: CMakeLists.txt
3_2_led_flash/: CMakeLists.txt
3_2_led_flash/Core/Inc/: delay.h
3_2_led_flash/Core/Src/: delay.c
3_2_led_flash/Core/User/src/: main.c
3_2_led_flash/cmake/: CMakeLists.txt
3_3_ buzzer/: CMakeLists.txt
3_3_ buzzer/Drivers/STM32F10x_StdPeriph_Driver/src/: stm32f10x_tim.c
3_3_buzzer/: CMakeLists.txt
3_3_buzzer/Core/Src/: delay.c  main.c
3_3_buzzer/Core/User/src/: i2c.c  main.c
3_3_buzzer/Drivers/CMSIS/src/: core_cm3.c
3_3_buzzer/Drivers/STM32F10x_StdPeriph_Driver/inc/: stm32f10x_tim.h
3_3_buzzer/cmake/: CMakeLists.txt
3_4_btn_ctrl_led/: CMakeLists.txt  CMakeLists_template.txt
3_4_btn_ctrl_led/Core/Device/src/: led.c
3_4_btn_ctrl_led/Core/Inc/: button.h  led.h
3_4_btn_ctrl_led/Core/Src/: button.c
3_4_btn_ctrl_led/Core/User/src/: main.c
3_5_ps_sensor_ctrl/: CMakeLists.txt
3_5_ps_sensor_ctrl/Core/Inc/: buzzer.h  ps_sensor.h
3_5_ps_sensor_ctrl/Core/Src/: buzzer.c  delay.c  main.c  ps_sensor.c
3_5_ps_sensor_ctrl/Drivers/STM32F10x_StdPeriph_Driver/Src/: stm32f10x_spi.c
